# HellGateBot

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt
Console/: CMakeLists.txt  main.cpp
Core/: BrowserEmulator.cpp  BrowserEmulator.h  CMakeLists.txt  Configuration.cpp  Configuration.h  DataContracts.h  HellGateBot.cpp  HellGateBot.h  HtmlDocumentWrapper.cpp  HtmlDocumentWrapper.h  Utils.cpp  Utils.h  WebsiteActor.cpp  WebsiteActor.h
CoreTests/: CMakeLists.txt  main.cpp
CoreTests/MockPages/: DaysPage.html  DoctorTypesPage.html  DoctorsPage.html  MainPage.html  ObtainingPage.html  TicketsPage.html
